--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
             </div>
             <div class="sociais">
-                <a href="https://www.instagram.com/crashador/" target="_blank">
+                <a href="https://www.instagram.com/outfeast/" target="_blank">
                     <img src="images/insta.webp" width="20" height="20" alt="Instagram">
                 </a>
-                <a href="https://www.tiktok.com/@crashador?lang=pt-BR" target="_blank">
+                <a href="https://www.tiktok.com/@nogamblenocrypto?lang=pt-BR" target="_blank">
                     <img src="images/ttk.webp" width="20" height="20" alt="Tiktok">
                 </a>
             </div>
