--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <script src="js/particles.min.js"></script>
     <div class="background"></div>
-    <video id="audio" loop="" preload="auto">
+    <audio id="audio" loop preload="auto" muted>
       <source src="media/music2.mp3" type="audio/mp3">
-    </video>
+    </audio>
     <ul class="black-overlay">
         <li style="--clr:#ffffff; font-size: 30px;">
             <h2><a data-text="click" onclick="removeOverlay()">click</a></h2>
