--- a/index.html
+++ b/index.html
@@ -1,105 +1,93 @@
-<!DOCTYPE html><html lang="pt-br"><head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="images/click.png" rel="icon" type="image/png">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Quicksand:wght@600&family=Montserrat:wght@600&family=Rethink+Sans&display=swap">
-    <title>thestars</title>
-    <meta content="#2b2d31" name="theme-color">
-    <meta content="thestars.lol made by @2ogp" property="og:description">
-    
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="images/click.png" rel="icon" type="image/png">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Quicksand:wght@600&family=Montserrat:wght@600&family=Rethink+Sans&display=swap">
+  <title>thestars</title>
+  <meta content="#2b2d31" name="theme-color">
+  <meta content="thestars.lol made by @2ogp" property="og:description">
 </head>
 
 <body>
-    <script src="js/particles.min.js"></script>
-    <div class="background"></div>
-    <audio id="audio" loop preload="auto" muted>
-      <source src="media/music2.mp3" type="audio/mp3">
-    </audio>
-    <ul class="black-overlay">
-        <li style="--clr:#ffffff; font-size: 30px;">
-            <h2><a data-text="click" onclick="removeOverlay()">click</a></h2>
-        </li>
-    </ul>
-    <div id="particles-js"></div>
-    <div class="profile-container fade-in" style="display: flex; position: center;"></div>
-    <button id="muteButton" style="position: absolute; top: 10px; left: 10px; background: none; border: none; padding: 0;">
-        <img id="muteIcon" src="images/mutado.png" alt="Muted" style="width: 20px; height: 20px;">
-        <img id="unmuteIcon" src="images/desmutado.png" alt="Unmuted" style="width: 20px; height: 20px; display: none;">
-    </button>
-    <div class="absolute top-4 right-4 z-20">
-      <div class="flex items-center space-x-2 p-2 bg-opacity-20 rounded-md shadow">
-        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye text-gray-300" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"></path></svg>
-        <span class="text-lg font-semibold text-gray-300" id="views">0</span>
-      </div>
+  <script src="js/particles.min.js"></script>
+
+  <div class="background"></div>
+
+  <audio id="audio" loop preload="auto" muted>
+    <source src="media/music2.mp3" type="audio/mp3">
+  </audio>
+
+  <ul class="black-overlay">
+    <li style="--clr:#ffffff; font-size: 30px;">
+      <h2><a data-text="click" onclick="removeOverlay()">click</a></h2>
+    </li>
+  </ul>
+
+  <div id="particles-js"></div>
+
+  <div class="profile-container fade-in" style="display: flex;"></div>
+
+  <button id="muteButton" style="position: absolute; top: 10px; left: 10px; background: none; border: none; padding: 0;">
+    <img id="muteIcon" src="images/mutado.png" alt="Muted" style="width: 20px; height: 20px;">
+    <img id="unmuteIcon" src="images/desmutado.png" alt="Unmuted" style="width: 20px; height: 20px; display: none;">
+  </button>
+
+  <div class="absolute top-4 right-4 z-20">
+    <div class="flex items-center space-x-2 p-2 bg-opacity-20 rounded-md shadow">
+      <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye text-gray-300" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+        <path fill="currentColor" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"></path>
+      </svg>
+      <span class="text-lg font-semibold text-gray-300" id="views">0</span>
     </div>
-    <script>
-        particlesJS("particles-js", {
-          "particles": {
-            "number": {
-              "value": 30,
-              "density": {
-                "enable": true,
-                "value_area": 800
-              }
-            },
-            "color": {
-              "value": "#ffffff"
-            },
-            "shape": {
-              "type": "image",
-              "image": {
-                "src": "https://cdn.discordapp.com/emojis/998607318893723798.webp?size=96&quality=lossless",
-                "width": 100,
-                "height": 100
-              }
-            },
-            "opacity": {
-              "value": 0.5,
-              "random": false,
-              "anim": {
-                "enable": false,
-                "speed": 1,
-                "opacity_min": 0.1,
-                "sync": false
-              }
-            },
-            "size": {
-              "value": 12,
-              "random": true,
-              "anim": {
-                "enable": false,
-                "speed": 3,
-                "size_min": 0.1,
-                "sync": false
-              }
-            },
-            "line_linked": {
-              "enable": false,
-            },
-            "move": {
-              "enable": true,
-              "speed": 2,
-              "direction": "bottom",
-              "random": true,
-              "straight": false,
-              "out_mode": "out",
-              "bounce": false,
-              "attract": {
-                "enable": false,
-                "rotateX": 600,
-                "rotateY": 1200
-              }
-            }
+  </div>
+
+  <!-- CORREÇÃO DE particlesJS (removendo vírgula solta) -->
+  <script>
+    particlesJS("particles-js", {
+      particles: {
+        number: {
+          value: 30,
+          density: {
+            enable: true,
+            value_area: 800
+          }
         },
-        "interactivity": {
-            "detect_on": "canvas",
+        color: { value: "#ffffff" },
+        shape: {
+          type: "image",
+          image: {
+            src: "https://cdn.discordapp.com/emojis/998607318893723798.webp?size=96&quality=lossless",
+            width: 100,
+            height: 100
+          }
+        },
+        opacity: { value: 0.5 },
+        size: {
+          value: 12,
+          random: true
+        },
+        line_linked: { enable: false },
+        move: {
+          enable: true,
+          speed: 2,
+          direction: "bottom",
+          random: true,
+          straight: false,
+          out_mode: "out",
+          bounce: false
         }
+      },
+      interactivity: {
+        detect_on: "canvas"
+      }
     });
-    </script>
-    <script src="js/script.js"></script>
-    <script type="text/javascript" src="js/tilt.js"></script>
-    
+  </script>
 
-
-</body></html>
+  <!-- JS FINAL deve vir no fim -->
+  <script src="js/script.js"></script>
+  <script src="js/tilt.js"></script>
+</body>
+</html>
