--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="user-info">
                 <div class="username-container">
                     <div class="badges">
-                        <h2 class="username" data-user-id="1355225924018245796">@dominacao</h2>
+                        <h2 class="username" data-user-id="1355225924018245796"></h2>
                         <img src="images/platinum.png" width="20" height="20" alt="Nitro Icon" data-tooltip="Nitro">
                         <img src="images/lv8.svg" width="22" height="22" alt="Boost Icon" data-tooltip="Boost">
                         <img src="images/quest.png" width="20" height="20" alt="Quest Icon" data-tooltip="Quest">
                     </div>
                 </div>
-                <p class="nickname" data-user-id="1355225924018245796">@dominacao</p>
+                <p class="nickname" data-user-id="1355225924018245796"></p>
             </div>
             <div class="spotify-info" data-user-id="1355225924018245796">
                 <p class="ouvindo">
@@ -56,16 +56,16 @@
                 <div class="spotify-details">
                     <img src="images/bbabdf10acc7bb4c0eb50460d3ceec59.jpg" alt="Spotify Song Image" class="spotify-image" data-user-id="1355225924018245796">
                     <div class="spotify-text">
-                        <div class="spotify-song" data-user-id="1355225924018245796">@dominacao</div>
-                        <div class="spotify-artist" data-user-id="1355225924018245796">@dominacao</div>
+                        <div class="spotify-song" data-user-id="1355225924018245796"></div>
+                        <div class="spotify-artist" data-user-id="1355225924018245796"></div>
                     </div>
                 </div>
                 <div class="spotify-bar">
                     <div class="spotify-progress" data-user-id="1355225924018245796" style="width: 0%;"></div>
                 </div>
                 <div class="spotify-time">
-                    <span class="spotify-time-start" data-user-id="1355225924018245796">@dominacao</span>
-                    <span class="spotify-time-end" data-user-id="1355225924018245796">@dominacao</span>
+                    <span class="spotify-time-start" data-user-id="1355225924018245796"></span>
+                    <span class="spotify-time-end" data-user-id="1355225924018245796"></span>
                 </div>
             </div>
             <div class="sociais">
