--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Discord Profile</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="images/avatar.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet" />
 </head>
 <body>
   <!-- Partículas -->
@@ -25,8 +26,8 @@
     <p id="custom-status"></p>
 
     <div class="socials">
-      <a href="https://tiktok.com/@yourusername" target="_blank" class="social-icon">🎵</a>
-      <a href="https://instagram.com/yourusername" target="_blank" class="social-icon">📸</a>
+      <a href="https://tiktok.com/@nogamblenocrypto" target="_blank" class="social-icon">🎵</a>
+      <a href="https://instagram.com/outfeast" target="_blank" class="social-icon">📸</a>
     </div>
 
     <button id="audio-btn">🔊</button>
