--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
   <div class="profile-card">
     <img id="avatar" src="images/avatar.png" alt="Avatar" class="avatar" />
     <h1 id="username">Loading...</h1>
-    <p id="status">Status: ...</p>
+    <!-- Status removido -->
     <p id="custom-status"></p>
 
     <div class="socials">
-      <a href="https://tiktok.com/@nogamblenocrypto" target="_blank" class="social-icon">🎵</a>
-      <a href="https://instagram.com/outfeast" target="_blank" class="social-icon">📸</a>
+      <a href="https://instagram.com/outfeast" target="_blank" class="social-icon">
+        <img src="https://img.icons8.com/ios/50/FFFFFF/instagram-new.png" alt="Instagram" />
+      </a>
+      <a href="https://tiktok.com/@nogamblenocrypto" target="_blank" class="social-icon">
+        <img src="https://img.icons8.com/ios/50/FFFFFF/tiktok--v1.png" alt="TikTok" />
+      </a>
     </div>
 
     <button id="audio-btn">🔊</button>
